moved JVM_ARGS from run.sh to Dockerfile