@@ -1,4 +1,4 @@
 #!/bin/bash
 
-JVM_ARGS="-server -Xss10M -XX:+UseThreadPriorities -XX:ThreadPriorityPolicy=42 -Xms512M -Xmx512M -Xmn100M -XX:+HeapDumpOnOutOfMemoryError -XX:+AggressiveOpts -XX:+OptimizeStringConcat -XX:+UseFastAccessorMethods -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false ${JAVA_OPTS}"
 jmeter.sh -s -Jserver.rmi.localport=60000 -Djava.rmi.server.hostname=$HOSTNAME "$@"
+
